// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`misc isGroup 1`] = `false`;

exports[`misc onlineParticipants 1`] = `
Array [
  Object {
    "activity": "ACTIVE",
    "address": "address2",
    "name": "name2",
    "peerId": "peerId2",
    "profilePicture": "profilePicture2",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;

exports[`misc otherParticipants 1`] = `
Array [
  Object {
    "activity": "ACTIVE",
    "address": "address",
    "name": "name",
    "peerId": "peerId",
    "profilePicture": "profilePicture",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;

exports[`misc recipient 1`] = `
Object {
  "address": "consequuntur",
  "addresses": Array [
    "Similique sunt eligendi possimus voluptas.
Odio rerum aut non quam suscipit vero labore.
Doloribus sequi quisquam qui.
Aut sapiente omnis perspiciatis animi voluptas.",
    "consectetur",
    "Nesciunt dolores sint alias voluptatem perferendis eaque in doloremque.",
    "id natus dolorem",
    "tempora impedit dolor",
    "Neque voluptatem vel labore dignissimos saepe et mollitia.",
    "Consequatur rerum repudiandae saepe asperiores nisi debitis. Quo laboriosam laudantium. Voluptatem omnis voluptate. Aliquam et qui sequi soluta laudantium.",
    "Explicabo qui totam earum aut blanditiis. Magni non facere dolorum nihil. Iusto ipsum officiis quos eligendi eius ad. Molestiae libero et vel incidunt tempore fuga.
 
Cupiditate blanditiis vel nihil ut aut. Quas illum aut voluptas sequi dolor non eum. Aperiam officiis nulla aliquam praesentium beatae. Harum velit facilis repellat et officiis. Voluptas rerum ad consectetur.
 
Dolor et voluptatem aliquam. Amet et culpa sit et dolorem nobis ut est. Necessitatibus libero consequatur.",
    "Magnam nobis consequatur fugiat velit sed illo qui beatae.",
  ],
  "admin": "necessitatibus",
  "creator": "numquam quas ipsa",
  "encryptionKey": "Quo nesciunt quisquam amet perferendis molestiae alias aut ut voluptatem. Et laborum vel. Eveniet magnam magni quia id dolor quidem odit ut.",
  "id": "77baa97a-3fe5-408d-b773-2471d7a5f389",
  "lastUpdate": 78280,
  "members": Array [
    Object {
      "address": "Possimus omnis est nesciunt a. Repellendus error voluptatem quisquam est aut consequatur. Sint eaque harum eligendi fuga earum. Rerum aliquam quia repellat aut maxime et magni dolores maiores.
 
Possimus cupiditate repellendus est reprehenderit. Deleniti ab consequatur eligendi mollitia occaecati quas ab. Inventore vel dicta consequuntur commodi doloribus et quia omnis at.
 
Voluptatem qui saepe nam. Quia dicta ut sequi. Sint omnis facere labore porro veritatis quod officiis qui. Minus qui voluptatibus.",
      "name": "Eve Welch Sr.",
      "peerId": "reprehenderit",
      "photoHash": "Aut occaecati nam et. Sunt et ad vitae natus quasi illum est natus est. Enim aut itaque doloribus.",
      "status": "Iste eveniet velit. Et illo natus optio deserunt eos eligendi quo sapiente quia. Eaque asperiores cupiditate.",
    },
    Object {
      "address": "Tempore molestiae ullam dolorem molestiae. Non beatae assumenda qui et aperiam hic aut delectus. Neque tempora voluptatibus soluta non maiores debitis voluptas excepturi rem. Dolores autem qui quia.
 
Porro totam voluptas. Sit totam voluptatibus autem iste magni tempore dolorum velit. Esse aut mollitia id. Quaerat praesentium quos. Tempora fugit et eos et ratione.
 
Voluptatem deleniti et facere quis dolorem dolore. Vel assumenda aperiam minima odio sint dicta ex nihil. Eligendi voluptas delectus.",
      "name": "Maureen Bartell Sr.",
      "photoHash": "esse nam voluptatum",
      "status": "Est libero fuga debitis animi.",
    },
    Object {
      "address": "iure",
      "name": "Alana Hoeger",
      "photoHash": "Minima velit debitis a ut enim fugit laboriosam. Corporis libero illo incidunt. Odio voluptatem et rerum. In aperiam pariatur. Vel aliquid incidunt nesciunt nihil ut deleniti est asperiores.",
      "status": "ut",
    },
    Object {
      "address": "Rerum beatae aliquam et.",
      "name": "Betty Schiller",
      "peerId": "Et non adipisci perferendis nesciunt iusto et non rerum alias. Quas omnis est architecto odio quod. Enim cumque odit nihil esse nihil. Vero eum quaerat et atque. Illum reprehenderit magnam sed amet. Aspernatur doloribus et quas et voluptates ut.",
      "photoHash": "Voluptas deserunt qui qui quibusdam.",
      "status": "Dolores dicta consequatur quidem neque iste.",
    },
    Object {
      "address": "Voluptates eaque occaecati. Iste quis eveniet. Sit est est provident et qui officiis esse.
 
Qui voluptas commodi mollitia ipsum cum. Repellat et voluptatem earum dicta. Autem nulla cupiditate veritatis non. Ea sapiente dignissimos nemo. Quia nulla aut commodi similique ad et explicabo. Fugit omnis et aut quod dolor consequatur in consequatur.
 
Hic ipsam nihil. Sunt aspernatur molestias iste labore repellendus velit. Id iure omnis neque quaerat optio deleniti exercitationem necessitatibus. Non fugiat laudantium quaerat iusto quo voluptas nihil ea. Inventore id error consequatur aut sit incidunt cumque fugit ut. Eos et aut animi dicta harum.",
      "name": "Darlene Swift",
      "photoHash": "facere debitis quis",
      "status": "Est voluptatem accusantium debitis est.
Culpa quibusdam quia aut provident non fuga aut.",
    },
    Object {
      "address": "Quidem voluptatem et accusantium quia qui omnis.",
      "name": "Allen Dietrich",
      "peerId": "Voluptas est facere explicabo aut nesciunt modi nihil nobis. Minima est exercitationem dolorem dolore quis quaerat neque cum. Facere hic veniam at deleniti. Cumque non dolorem numquam beatae et sit aut error. Ex expedita excepturi totam accusamus accusantium et fugit ut libero. Quod enim reprehenderit est sed sunt assumenda consequatur rerum.",
      "photoHash": "Sunt voluptas quaerat. Porro mollitia quia facere. Ut minus alias. Voluptatem quidem aut blanditiis quidem.",
      "status": "Dolor ipsam et eum corrupti. Cumque cum quis et incidunt quia qui. Repellat est corrupti similique molestiae quidem consequatur esse numquam magnam. Illum similique incidunt. Ducimus voluptas dignissimos et totam necessitatibus consequatur. Placeat atque nobis perspiciatis.
 
Et aut ad quidem in debitis eos. Voluptatem sit molestias illo optio eum excepturi nihil quia itaque. Recusandae esse sunt quisquam exercitationem et. Non eaque in praesentium rem repellendus laboriosam. Cumque nostrum eum quae fugiat aut omnis dignissimos modi. Assumenda quae autem quis facere.
 
Ea ut et veritatis enim voluptate consequuntur magni quia ad. Totam est labore hic fugiat nisi. Perferendis ut vel ea vitae quo. Perferendis cumque mollitia autem beatae. Blanditiis voluptas deserunt quia praesentium amet recusandae nostrum et facere.",
    },
    Object {
      "address": "Cumque ullam inventore tempora qui voluptate tempora. Consequatur praesentium nulla voluptatem reiciendis numquam omnis veritatis ut necessitatibus.",
      "name": "Emmanuel Bartoletti",
      "photoHash": "Quia et provident itaque. Quod sit repellendus beatae rerum. Ab doloremque delectus quis.",
      "status": "Quia labore esse totam aut cum maiores distinctio quibusdam sed.
Non aut architecto.
Est veniam assumenda qui voluptas molestiae ad commodi perspiciatis sed.
Consequatur animi veniam.",
    },
    Object {
      "address": "Consequatur incidunt omnis voluptatibus exercitationem et.
Explicabo repellat dolorem doloremque.
Id mollitia laudantium non sequi exercitationem.
Iusto nihil distinctio tenetur omnis ad qui provident.",
      "name": "Dr. Merlin Fahey",
      "peerId": "Quod sed dolorem eligendi et veritatis dolor.",
      "photoHash": "ut",
      "status": "Nihil reprehenderit tempora dignissimos et. Deserunt qui nesciunt excepturi iure repellat deleniti fugiat recusandae nobis. Aliquam adipisci ad voluptatem aut non nobis ipsam. Perferendis ab illum voluptas sed voluptate ipsa. Aliquam minus quis qui.",
    },
  ],
  "name": "Mary Leannon",
  "openInvites": true,
}
`;

exports[`misc recipient 2`] = `
Object {
  "account": Object {
    "accountId": "Checking Account",
    "from": ".",
    "fromMailboxId": "12345",
    "status": 429,
    "to": "./path/to/file",
    "toMailboxId": "v4.0.0-rc.4",
  },
  "activeChat": true,
  "address": "0xdf9eb223bafbe5c5271415c75aecd68c21fe3d7f",
  "badge": "community",
  "encryptedTextilePubkey": "",
  "item": Object {},
  "localSypingState": "NOT_TYPING",
  "mailboxId": "",
  "name": "Taurus Nix",
  "peerId": "77baa97a-3fe5-408d-b773-2471d7a5f389",
  "pending": true,
  "profilePicture": "",
  "publicKey": "NoWiFi4you",
  "state": "idle",
  "status": "",
  "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
  "unreadCount": 123,
  "userAccount": "",
}
`;

exports[`misc typingParticipants 1`] = `
Array [
  Object {
    "activity": "TYPING",
    "address": "address2",
    "name": "name2",
    "peerId": "peerId2",
    "profilePicture": "profilePicture2",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;
